--- a/dev/ingress.yaml
+++ b/dev/ingress.yaml
@@ -4,6 +4,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: learn-ingress
+  namespace: myapp
 spec:
   rules:
     - host: '*'
