--- a/dev/ingress.yaml
+++ b/dev/ingress.yaml
@@ -7,7 +7,7 @@ metadata:
   namespace: myapp
 spec:
   rules:
-    - host: '10.108.235.105'
+    - host: 'localhost'
       http:
         paths:
           - path: /
