--- a/apps/application.yaml
+++ b/apps/application.yaml
@@ -9,7 +9,7 @@ spec:
   source:
     repoURL: https://github.com/MohamedGouaouri/argocd-demo.git
     targetRevision: HEAD
-    path: dev
+    path: apps/dev
   destination: 
     server: https://kubernetes.default.svc
     namespace: myapp
