--- a/resources/dev/ingress.yaml
+++ b/resources/dev/ingress.yaml
@@ -1,20 +1,20 @@
 
 
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: learn-ingress
-  namespace: myapp
-spec:
-  rules:
-    - host: learn.io
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: myapp-service
-                port:
-                  number: 8080
+# apiVersion: networking.k8s.io/v1
+# kind: Ingress
+# metadata:
+#   name: learn-ingress
+#   namespace: myapp
+# spec:
+#   rules:
+#     - host: learn.io
+#       http:
+#         paths:
+#           - path: /
+#             pathType: Prefix
+#             backend:
+#               service:
+#                 name: myapp-service
+#                 port:
+#                   number: 8080
 
